# rara

./: .gitignore  .tmp-pr-context-assembly-and-tui-continuity.md  .tmp-pr-split-large-files.md  .tmp-pr-transcript-tail-folding.md  .tmp-pr44.md  .tmp-pr50.md  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.agents/skills/add_tests/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build.yml  clippy.yml  fmt.yml  test.yml
crates/config/: Cargo.toml
crates/config/src/: defaults.rs  lib.rs  migration.rs  model.rs  provider_surface.rs  secrets.rs  serde_helpers.rs
crates/instructions/: Cargo.toml
crates/instructions/src/: lib.rs  prompt.rs  workspace.rs
crates/provider-catalog/: Cargo.toml
crates/provider-catalog/src/: deepseek.rs  lib.rs  redaction.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  tests.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/tool-macros/: Cargo.toml
crates/tool-macros/src/: lib.rs
docs/: README.md  todo.md
docs/features/: README.md  agenthub-team-mode.md  classifier-and-routing.md  codex-auth-login.md  context-architecture.md  context-compression.md  local-models-and-tui.md  memory-records.md  memory-selection.md  openai-compatible-model-config.md  planning-mode.md  prompt-runtime.md  rara-home-layout.md  repo-extension-surface.md  runtime-control-plane.md  skill-tool.md  slash-review-command.md  team-runtime-mode.md  terminal-bench-evaluation.md  threads.md  todo-runtime.md  tool-transcript.md  verify-skill.md  web-tools.md
docs/journal/: 2026-04-11-local-model-bootstrap.md  2026-04-17-prompt-runtime.md  2026-04-18-completion-lifecycle.md  2026-04-18-internal-crates-phase1.md  2026-04-18-planning-lifecycle.md  2026-04-18-planning-subagents.md  2026-04-18-sandbox-hardening.md  2026-04-18-secret-handling.md  2026-04-19-codex-auth-login-spec.md  2026-04-19-context-compression.md  2026-04-19-plan-completion-boundary.md  2026-04-19-planning-mode-contract.md  2026-04-20-codex-auth-login-integration.md  2026-04-20-codex-compatible-skill-roots.md  2026-04-20-openai-compatible-model-config.md  2026-04-20-rara-home-layout.md  2026-04-20-tool-transcript-and-queued-follow-up.md  2026-04-22-codex-model-catalog.md  2026-04-22-codex-responses-backend.md  2026-04-24-context-observability-and-restore.md  2026-04-24-provider-surface-continuity.md  2026-04-24-reasoning-summary-config.md  2026-04-24-runtime-bootstrap.md  2026-04-24-shared-runtime-context.md  2026-04-24-thread-store-boundary.md  2026-04-25-context-assembly-stage1.md  2026-04-25-plan-mode-prompt-tightening.md  2026-04-27-deepseek-endpoint-contract.md  2026-04-27-tool-loop-final-fallback.md  2026-04-28-background-task-controls.md  2026-04-28-read-only-bash-policy.md  2026-04-28-terminal-event-cells.md  2026-04-29-agent-driven-planning.md  2026-04-29-codex-style-active-progress.md  2026-04-29-codex-style-skill-context.md  2026-04-29-context-assembler-split.md  2026-04-29-deepseek-implicit-thinking-history.md  2026-04-29-execute-autonomy-prompt.md  2026-04-29-sandbox-path-roots.md  2026-04-29-strict-read-only-subagents.md  (+32 more)
src/: acp.rs  agent.rs  app_cli.rs  codex_model_catalog.rs  config.rs  experience_store.rs  file_lock.rs  gemma4_backend.rs  llm.rs  local_backend.rs  main.rs  memory_store.rs  oauth.rs  prompt.rs  redaction.rs  runtime_context.rs  runtime_control.rs  sandbox.rs  session.rs  shell_env.rs  skill.rs  state_db.rs  thread_cli.rs  thread_rollout_log.rs  thread_store.rs  todo.rs  tool.rs  tool_result.rs  tui.rs  vectordb.rs  workspace.rs
src/agent/: compact.rs  context_view.rs  planning.rs  prompting.rs  tests.rs
src/agent/tests/: compaction.rs  context_view.rs  planning.rs  support.rs
src/context/: assembler.rs  assembly_view.rs  compaction_view.rs  memory_selection.rs  mod.rs  retrieval_view.rs  runtime.rs
src/context/assembler/: compaction.rs  memory_selection.rs  mod.rs  view.rs
src/llm/: codex_tool_schema.rs  codex_tools_compat.rs  deepseek_dsml.rs  ollama.rs  openai_compatible.rs  shared.rs  tests.rs  types.rs
src/llm/openai_compatible/: codex.rs  usage.rs
src/local_backend/: model.rs  parser.rs  prompt.rs  tests.rs
src/runtime_context/: tooling.rs
src/state_db/: tests.rs
src/thread_store/: tests.rs
src/tools/: agent.rs  bash.rs  context.rs  file.rs  mod.rs  patch.rs  planning.rs  pty.rs  search.rs  skill.rs  todo.rs  vector.rs  web.rs  workspace.rs
src/tools/bash/: background.rs  commands.rs
src/tools/file/: tests.rs
src/tools/web/: exa.rs  fetch.rs  mod.rs  search.rs
src/tui/: app_event.rs  auth_mode_picker.rs  command.rs  constants.rs  context_display.rs  control_tokens.rs  custom_terminal.rs  event_dispatch.rs  event_loop.rs  event_stream.rs  format.rs  highlight.rs  insert_history.rs  interaction_text.rs  keymap.rs  layout_utils.rs  line_utils.rs  markdown.rs  markdown_render.rs  markdown_stream.rs  message_role.rs  mod.rs  plan_display.rs  provider_flow.rs  queued_input.rs  render.rs  runtime.rs  session_restore.rs  state.rs  status_display.rs  sub_agent_display.rs  submit.rs  terminal_event.rs  terminal_ui.rs  tests.rs  theme.rs  tool_text.rs
src/tui/command/: display.rs  mod.rs  model.rs  specs.rs  status.rs  tests.rs
src/tui/markdown_render/: local_links.rs
src/tui/render/: bottom_pane.rs  bottom_pane_tests.rs  cells.rs  cells_components.rs  cells_tests.rs  diff.rs  helpers.rs  history_pipeline.rs  overlay.rs  overlay_setup.rs  tests.rs  viewport.rs
src/tui/render/cells/: active_turn.rs  cells_components.rs  cells_tests.rs  committed_turn.rs  mod.rs  plan.rs  progress.rs  terminal.rs  tool_progress.rs
src/tui/render/cells_tests/: active_general.rs  active_plan.rs  committed.rs
src/tui/runtime/: commands.rs  events.rs  tasks.rs
src/tui/runtime/events/: helpers.rs  tests.rs
src/tui/snapshots/: rara__tui__auth_mode_picker__tests__auth_mode_picker_local.snap  rara__tui__auth_mode_picker__tests__auth_mode_picker_ssh.snap
src/tui/state/: composer.rs  helpers.rs  mod.rs  persistence.rs  state_presets.rs  tests.rs  transcript.rs  types.rs
src/tui/submit/: pending.rs
(+15 files in other folders)
