[package]
name = "rara"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
owo-colors = "4.0"
indicatif = "0.17"
tiktoken-rs = "0.9"
dirs = "6.0"
open = "5.0"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2.1"
url = "2.5"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
walkdir = "2.5"
glob = "0.3"
regex = "1.11"
regex-lite = "0.1.8"
uuid = { version = "1.11", features = ["v4"] }
lancedb = "0.27"
futures = "0.3"
rusqlite = "0.32"
pulldown-cmark = "0.10"
textwrap = "0.16.2"
unicode-width = "0.2"
syntect = "5"
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
agent-client-protocol = { version = "0.10", features = ["unstable"] }
hf-hub = "0.4"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
candle = { git = "https://github.com/huggingface/candle", rev = "34625ab6d1567a0bc132ac6bc8dc2cce0e16d86d", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "34625ab6d1567a0bc132ac6bc8dc2cce0e16d86d", package = "candle-nn" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "34625ab6d1567a0bc132ac6bc8dc2cce0e16d86d", package = "candle-transformers" }

[dev-dependencies]
tempfile = "3.17"

[features]
default = []
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
