[workspace]
members = [
    ".",
    "crates/config",
    "crates/instructions",
    "crates/provider-catalog",
    "crates/sandbox",
    "crates/skills",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
dirs = "6.0"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.17"
codex-execpolicy = { git = "https://github.com/openai/codex", package = "codex-execpolicy", rev = "637f7dd6d737f3961e6bf32fbb3861c4953269c5" }

[package]
name = "rara"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "stream"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
owo-colors = "4.0"
indicatif = "0.18"
tiktoken-rs = "0.11"
dirs = "6.0"
open = "5.0"
rand = "0.10"
libc = "0.2"
base64 = "0.22"
sha2 = "0.11"
secrecy = { version = "0.10", features = ["serde"] }
rara-config = { path = "crates/config" }
rara-instructions = { path = "crates/instructions" }
rara-provider-catalog = { path = "crates/provider-catalog" }
rara-sandbox = { path = "crates/sandbox" }
rara-skills = { path = "crates/skills" }
urlencoding = "2.1"
url = "2.5"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
walkdir = "2.5"
glob = "0.3"
regex = "1.11"
regex-lite = "0.1.8"
uuid = { version = "1.11", features = ["v4"] }
lancedb = "0.27"
arrow-array = "57.2"
arrow-schema = "57.2"
lance-index = "=4.0.0"
futures = "0.3"
eventsource-stream = "0.2.3"
rusqlite = "0.39"
pulldown-cmark = "0.13"
textwrap = "0.16.2"
unicode-width = "0.2"
syntect = "5"
portable-pty = "0.9"
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
agent-client-protocol = { version = "0.11", features = ["unstable"] }
hf-hub = "0.5"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
codex-login = { git = "https://github.com/openai/codex", package = "codex-login", rev = "637f7dd6d737f3961e6bf32fbb3861c4953269c5" }
codex-models-manager = { git = "https://github.com/openai/codex", package = "codex-models-manager", rev = "637f7dd6d737f3961e6bf32fbb3861c4953269c5" }
candle = { git = "https://github.com/huggingface/candle", rev = "34625ab6d1567a0bc132ac6bc8dc2cce0e16d86d", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "34625ab6d1567a0bc132ac6bc8dc2cce0e16d86d", package = "candle-nn" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "34625ab6d1567a0bc132ac6bc8dc2cce0e16d86d", package = "candle-transformers" }
backon = "1.6.0"

[dev-dependencies]
tempfile = "3.17"
insta = "1.43"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[features]
default = []
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
