[package]
name = "rara-provider-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
rara-config = { path = "../config" }
reqwest = { version = "0.13", features = ["json"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
url = "2.5"
